# charcoal

./: .env.example  .gitignore  .mcp.json  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SPEC.md  charcoal-architecture-seed.md  railway.toml  skills-lock.json
.agents/skills/runpodctl/: SKILL.md
.chainlink/: hook-config.json  issues-export.json  issues.db
.chainlink/rules/: global.md  tracking-normal.md  tracking-relaxed.md  tracking-strict.md
.claude/: settings.json
.claude/commands/: decision.md  document.md  sync.md
.claude/hooks/: chainlink-uncommitted.sh  prompt-guard.py  session-start.py  work-check.py
.claude/skills/: archaeology.md
.github/workflows/: build-cope-b-image.yml  ci.yml
docs/: 2026-04-02-architecture-correction-briefing.md  2026-04-02-topic-first-discovery-and-sampling.md  chainlink-hook-cwd-fix.md  deciduous-workflow.md  design-language.md  dev-environment-setup.md  git-history.json  graph-data.json  multi-user-architecture-recommendations.md  research-alternative-approaches.md  research-bertopic.md  research-overlap-diagnosis.md  research-vader.md  scoring-walkthrough.html  toxicity-alternatives-report.md  what-charcoal-feels-like.html  zentropi-call-volume-estimation.md  zentropi-integration-overview.md
docs/decisions/: README.md
docs/plans/: 2026-02-19-behavioral-signals-design.md  2026-02-19-behavioral-signals-impl.md  2026-02-19-sqlite-to-postgres.md  2026-03-08-atproto-oauth-design.md  2026-03-08-atproto-oauth-impl.md  2026-03-10-multi-user-schema.md  2026-03-26-graph-distance-ensemble-impl.md
docs/superpowers/plans/: 2026-03-17-onboarding-flow.md  2026-03-18-railway-deploy.md  2026-03-19-contextual-scoring-impl.md  2026-03-20-nli-scoring-redesign-impl.md  2026-03-27-admin-dashboard-impl.md  2026-03-27-groq-ensemble-scorer-impl.md  2026-04-02-topic-first-discovery-impl.md  2026-06-05-cope-b-self-host.md  2026-06-22-runpod-scan-cost-backstop-impl.md  2026-06-23-classification-burst-decouple-impl.md  2026-07-03-batch-runpod-classifier-impl.md  2026-07-18-batch-amplification-event-inserts.md  2026-07-18-scan-speedup-and-hosting.md  2026-07-23-language-abstention.md
docs/superpowers/specs/: 2026-03-17-onboarding-flow-design.md  2026-03-18-railway-deploy-design.md  2026-03-19-contextual-scoring-design.md  2026-03-20-nli-scoring-redesign.md  2026-03-27-admin-dashboard-design.md  2026-03-27-groq-ensemble-scorer-design.md  2026-06-05-cope-b-self-hosted-design.md  2026-06-21-runpod-scan-cost-backstop-design.md  2026-06-23-classification-burst-decouple-design.md  2026-06-27-batch-runpod-classifier-design.md  2026-07-20-language-abstention-design.md
examples/: lang_gate_probe.rs
gpu/cope-b-runpod/: Dockerfile  README.md  handler.py  policy.txt  prompt.py  pyproject.toml  requirements.txt  runpod.yml
gpu/cope-b-runpod/tests/: conftest.py  smoke_test.sh  test_handler.py  test_prefix_cache.py  test_prompt.py
landing-page/charcoal-landing/: .gitignore  .prettierignore  package.json  svelte.config.js
migrations/postgres/: 0001_initial.sql  0002_pgvector.sql  0003_behavioral_signals.sql  0004_multiuser.sql  0005_contextual_scoring.sql  0006_graph_distance.sql  0007_last_login_at.sql  0008_fingerprint_scoring.sql  0009_classification_staging.sql  0010_scan_skips.sql
scripts/: build-web.sh  check-updates.sh  install-hooks.sh  restore-dbs.sh  start-service.sh
src/: config.rs  lib.rs  main.rs  status.rs
src/bluesky/: amplification.rs  client.rs  followers.rs  likes.rs  mod.rs  notifications.rs  posts.rs  profiles.rs  rate_limit.rs  relationships.rs  replies.rs
src/cli/: classify_compare.rs  classify_gate.rs  mod.rs
src/constellation/: client.rs  mod.rs
src/db/: mod.rs  models.rs  postgres.rs  queries.rs  schema.rs  sqlite.rs  traits.rs
src/discovery/: aggregate.rs  candidate.rs  counting_scorer.rs  dry_run.rs  engagement.rs  jetstream.rs  mod.rs  profile_filter.rs  seeds.rs  threat_expansion.rs  topic_search.rs
src/observability/: classifier_metrics.rs  mod.rs
src/output/: markdown.rs  mod.rs  terminal.rs
src/pipeline/: amplification.rs  mod.rs  sweep.rs
src/pipeline/scan_phases/: burst.rs  finalize.rs  gather.rs  mod.rs  staging.rs
src/scoring/: audit_log.rs  behavioral.rs  context.rs  language.rs  mod.rs  nli.rs  nli_audit.rs  profile.rs  threat.rs
src/topics/: embeddings.rs  fingerprint.rs  mod.rs  overlap.rs  tfidf.rs  traits.rs
src/toxicity/: classifier.rs  cost_meter.rs  download.rs  ensemble.rs  groq_safeguard.rs  mod.rs  onnx.rs  openai_moderation.rs  perspective.rs  rate_limiter.rs  runpod_cope_b.rs  traits.rs  zentropi.rs  zentropi_spike.rs
src/web/: auth.rs  mod.rs  scan_job.rs  test_helpers.rs  typeahead.rs
src/web/handlers/: accounts.rs  admin.rs  auth.rs  events.rs  fingerprint.rs  labels.rs  mod.rs  oauth.rs  scan.rs  status.rs  typeahead.rs
tests/: composition.rs  db_postgres.rs  golden_build_profile.rs  regression_language_gate.rs  unit_admin.rs  unit_audit_log.rs  unit_behavioral.rs  unit_classifier.rs  unit_classify_compare.rs  unit_classify_gate.rs  unit_clean_pass_isolation.rs  unit_constellation.rs  unit_context.rs  unit_cost_meter.rs  unit_discovery.rs  unit_ensemble.rs  unit_labels.rs  unit_language.rs  unit_likes.rs  unit_nli.rs  unit_oauth.rs  unit_post_sanitize.rs  unit_profile.rs  unit_progress_output.rs  unit_relationships.rs  unit_replies.rs  unit_sampling.rs  unit_sampling_personas.rs  unit_scan_phases.rs  unit_scan_skips.rs  unit_scoring.rs  unit_staleness.rs  unit_topics.rs  unit_toxicity_token_limit.rs  unit_typeahead.rs  web_labels.rs  web_oauth.rs
tests/fixtures/cope_b/: ab_sample.jsonl  smoke.jsonl
tools/find-fixtures/: README.md  find_fixtures.py
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  vitest.config.ts
web/src/: App.tsx  types.ts
web/src/lib/: api.ts  dashboard-state.test.ts  dashboard-state.ts  fingerprint-keywords.test.ts  fingerprint-keywords.ts  poll-actions.test.ts  poll-actions.ts  scan-steps.test.ts  scan-steps.ts  tiers.ts  types.ts
web/static/: robots.txt
(+13 files in other folders)
