[package]
name = "charcoal"
version = "0.1.0"
edition = "2021"
description = "Predictive threat detection for Bluesky"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime (required by bsky-sdk)
tokio = { version = "1", features = ["full"] }

# AT Protocol response types (for deserializing public API responses)
atrium-api = "0.25.7"

# HTTP client (for public AT Protocol API, Constellation, and Perspective API)
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Topic extraction
keyword_extraction = "1.5"
stop-words = "0.8"
regex-lite = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment / config
dotenvy = "0.15"

# Async trait support (for ToxicityScorer trait with async methods)
async-trait = "0.1"

# ONNX Runtime for local toxicity model inference
ort = "2.0.0-rc.11"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }

# Platform-appropriate directories (for model storage path)
dirs = "6"

# Async stream combinators (transitive dep via bsky-sdk, pinned for buffer_unordered)
futures = "0.3"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal output
colored = "3"
indicatif = "0.17"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["sqlite"]
sqlite = []
postgres = ["dep:sqlx-core", "dep:sqlx-postgres", "dep:pgvector"]

# PostgreSQL support — split crates avoid the sqlx umbrella's transitive
# sqlx-sqlite dependency which conflicts with rusqlite's bundled SQLite.
# pgvector pulls in the sqlx umbrella transitively (needed for runtime
# features), but only when the postgres feature is active.
[dependencies.sqlx-core]
version = "0.8"
default-features = false
features = ["chrono", "json"]
optional = true

[dependencies.sqlx-postgres]
version = "0.8"
default-features = false
features = ["chrono", "json"]
optional = true

[dependencies.pgvector]
version = "0.4"
features = ["sqlx"]
optional = true
